Fixed navbar text-color and collapse.

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -17,6 +17,10 @@ body {
   }
 }
 
+.navbar-default {
+  color: #333;
+}
+
 .btn_detail {
   font-family: Tahoma, Geneva, sans-serif;
 }
